--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
+  "name": "e8l-stals",
+  "version": "1.0.0",
+  "description": "This project aims to create a digital avenue for students, primarily of Los Baños, to search, view, and review available accommodations around the city. As of date, the face-to-face mode of learning is gradually being reinstated, and Los Baños would see an assumed increase in lodging from students. This leads to students discovering less options as others reserve the common dormitories and apartments. By implementing STALS, accommodation owners can showcase their available lodging units, and students can access their information quickly and easily, therefore hastening the process of tenancy. STALS also allows students to review accommodations, allowing for a social factor when deciding which units are suitable other than objective information.",
+  "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" "
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "start-watch": "nodemon server.js",
+    "dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
+  },
+  "author": "CMSC 128 - E8L",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cords": "^1.0.4",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
   }
 }
