--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cords": "^1.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
