--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://cmsc128e8l:cmsc128e8l@dummy-e8l.f2qa8wz.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://cmsc128e8l:cmsc128e8l@dummy-e8l.f2qa8wz.mongodb.net/dummy-128-e8l?retryWrites=true&w=majority
