--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "CMSC 128 - E8L",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cords": "^1.0.4",
     "dotenv": "^16.0.3",
@@ -19,7 +20,8 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
-    "string-sanitizer": "^2.0.2"
+    "string-sanitizer": "^2.0.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
