--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://cmsc128e8l:cmsc128e8l@dummy-e8l.f2qa8wz.mongodb.net/dummy-128-e8l?retryWrites=true&w=majority
+PRIVATE_KEY=t3ltN8Ecmsc-e8l@2023gp8n2xlcQ&m@M
