--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cords": "^1.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
