--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
+    "dev": "concurrently \"npm run start\" \"cd client && npm start\""
   },
   "author": "CMSC 128 - E8L",
   "license": "ISC",
