--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "CMSC 128 - E8L",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.2.3",
     "cords": "^1.0.4",
+    "dependencies": "^0.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
