--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "CMSC 128 - E8L",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.10.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cords": "^1.0.4",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "string-sanitizer": "^2.0.2",
     "validator": "^13.9.0"
