--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": "^0.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
