--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "react-easy-crop": "^4.7.4",
+    "react-image-crop": "^10.1.4",
     "sass": "^1.62.1",
     "string-sanitizer": "^2.0.2",
+    "tesseract.js": "^4.1.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
