--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "busboy": "^1.6.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "dependencies": "^0.0.1",
+    "fs": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
