--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
+    "busboy": "^1.6.0",
+    "busboy-body-parser": "^0.3.2",
     "cords": "^1.0.4",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "dependencies": "^0.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
