--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.6.0",
     "react-easy-crop": "^4.7.4",
     "react-image-crop": "^10.1.4",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "string-sanitizer": "^2.0.2",
     "tesseract.js": "^4.1.0",
