--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dependencies": "^0.0.1",
     "fs": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -19,6 +20,8 @@
     "react-image-crop": "^10.1.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.12",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
